--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js"
   },
+  "type": "module",
   "author": "Stalyn Jimenez",
   "license": "ISC",
   "dependencies": {
