--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Stalyn Jimenez",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
