--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Curso de node en js moderno de juan d ela torre",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "type": "module",
   "author": "Stalyn Jimenez",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
     "pug": "^3.0.2",
